feat: setup monitoring points persistent pipeline config fix geometry import remove stand-meter
