# lib/db/src/schema/pipes.ts
@@ -7,6 +7,12 @@ export const pipesTable = pgTable("pipes", {
   name: text("name").notNull(),
   diameter: doublePrecision("diameter"),
   material: text("material"),
+  networkType: text("network_type"),
+  installYear: doublePrecision("install_year"),
+  condition: text("condition"),
+  length: doublePrecision("length"),
+  zone: text("zone"),
+  spam: text("spam"),
   fromNode: text("from_node"),
   toNode: text("to_node"),
   coordinates: jsonb("coordinates").notNull().$type<number[][]>(),
